--- a/views/home.ejs
+++ b/views/home.ejs
@@ -194,71 +194,107 @@
 
 
     <!-- Our Partners carousel -->
-    <section class="homepage-partners-carousel">
+    <!-- <section class="homepage-partners-carousel">
         <div class="slider">
             <div class="slide-track">
                 <div class="slide">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/1.png" height="100" width="250"
+                    <img src="https://logos-world.net/wp-content/uploads/2021/04/Maserati-Logo-2020-present.png"
                         alt="" />
                 </div>
                 <div class="slide">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/2.png" height="100" width="250"
+                    <img src="https://clipground.com/images/ferrari-500-clipart-7.jpg" alt="" />
+                </div>
+                <div class="slide">
+                    <img src="https://purepng.com/public/uploads/medium/purepng.com-bentley-motors-logobentleybentley-motorsbritishmanufacturerluxury-carsloho-1701527414239tayyn.png"
                         alt="" />
                 </div>
                 <div class="slide">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/3.png" height="100" width="250"
+                    <img src="https://th.bing.com/th/id/R.d9a06e6af0ad0b383f7eeddaf38334e4?rik=GV5Kk8fVPukT0g&pid=ImgRaw&r=0"
                         alt="" />
                 </div>
                 <div class="slide">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/4.png" height="100" width="250"
+                    <img src="https://pngimg.com/uploads/tesla_logo/tesla_logo_PNG7.png" alt="" />
+                </div>
+                <div class="slide">
+                    <img src="https://logos-world.net/wp-content/uploads/2021/04/Maserati-Logo-2020-present.png"
                         alt="" />
                 </div>
                 <div class="slide">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/5.png" height="100" width="250"
+                    <img src="https://clipground.com/images/ferrari-500-clipart-7.jpg" alt="" />
+                </div>
+                <div class="slide">
+                    <img src="https://purepng.com/public/uploads/medium/purepng.com-bentley-motors-logobentleybentley-motorsbritishmanufacturerluxury-carsloho-1701527414239tayyn.png"
                         alt="" />
                 </div>
                 <div class="slide">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/6.png" height="100" width="250"
+                    <img src="https://th.bing.com/th/id/R.d9a06e6af0ad0b383f7eeddaf38334e4?rik=GV5Kk8fVPukT0g&pid=ImgRaw&r=0"
                         alt="" />
                 </div>
                 <div class="slide">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/7.png" height="100" width="250"
+                    <img src="https://pngimg.com/uploads/tesla_logo/tesla_logo_PNG7.png" alt="" />
+                </div>
+                <div class="slide">
+                    <img src="https://logos-world.net/wp-content/uploads/2021/04/Maserati-Logo-2020-present.png"
                         alt="" />
                 </div>
                 <div class="slide">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/1.png" height="100" width="250"
+                    <img src="https://clipground.com/images/ferrari-500-clipart-7.jpg" alt="" />
+                </div>
+                <div class="slide">
+                    <img src="https://purepng.com/public/uploads/medium/purepng.com-bentley-motors-logobentleybentley-motorsbritishmanufacturerluxury-carsloho-1701527414239tayyn.png"
                         alt="" />
                 </div>
                 <div class="slide">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/2.png" height="100" width="250"
+                    <img src="https://th.bing.com/th/id/R.d9a06e6af0ad0b383f7eeddaf38334e4?rik=GV5Kk8fVPukT0g&pid=ImgRaw&r=0"
                         alt="" />
                 </div>
                 <div class="slide">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/3.png" height="100" width="250"
+                    <img src="https://pngimg.com/uploads/tesla_logo/tesla_logo_PNG7.png" alt="" />
+                </div>
+                <div class="slide">
+                    <img src="https://logos-world.net/wp-content/uploads/2021/04/Maserati-Logo-2020-present.png"
                         alt="" />
                 </div>
                 <div class="slide">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/4.png" height="100" width="250"
+                    <img src="https://clipground.com/images/ferrari-500-clipart-7.jpg" alt="" />
+                </div>
+                <div class="slide">
+                    <img src="https://purepng.com/public/uploads/medium/purepng.com-bentley-motors-logobentleybentley-motorsbritishmanufacturerluxury-carsloho-1701527414239tayyn.png"
                         alt="" />
                 </div>
                 <div class="slide">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/5.png" height="100" width="250"
+                    <img src="https://th.bing.com/th/id/R.d9a06e6af0ad0b383f7eeddaf38334e4?rik=GV5Kk8fVPukT0g&pid=ImgRaw&r=0"
                         alt="" />
                 </div>
                 <div class="slide">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/6.png" height="100" width="250"
-                        alt="" />
+                    <img src="https://pngimg.com/uploads/tesla_logo/tesla_logo_PNG7.png" alt="" />
                 </div>
-                <div class="slide">
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/7.png" height="100" width="250"
-                        alt="" />
-                </div>
+
+
             </div>
         </div>
-    </section>
+        </div>
+    </section> -->
 
 
 
+
+    <!-- <section class="homepage-partners-slick-carousel">
+        <div class="slick-carousel-partners">
+            <div>
+                <img src="https://pngimg.com/uploads/tesla_logo/tesla_logo_PNG7.png" alt="" />
+            </div>
+            <div>
+                <img src="https://pngimg.com/uploads/tesla_logo/tesla_logo_PNG7.png" alt="" />
+            </div>
+            <div>
+                <img src="https://pngimg.com/uploads/tesla_logo/tesla_logo_PNG7.png" alt="" />
+            </div>
+            <div>
+                <img src="https://pngimg.com/uploads/tesla_logo/tesla_logo_PNG7.png" alt="" />
+            </div>
+        </div>
+    </section> -->
 
 
     <section class="homepage-customer-reviews">
@@ -332,7 +368,7 @@
                         <li class="list-group-item-1"><img style="object-fit: contain;"
                                 src="https://cdn.shopify.com/s/files/1/0724/4221/6768/products/b58ce7b99582c961375527c3c6b27ebb_45x.png?v=1694228292"
                                 alt=""></li>
-                                <li class="list-group-item-2">MUKUTA 10 Plus</li>
+                        <li class="list-group-item-2">MUKUTA 10 Plus</li>
 
                     </ul>
                 </div>
