--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="/css/app.css">
 
 
-    <title>Boilerplate</title>
+    <title>VET STORE, BABEEE</title>
 </head>
 
 <body>
