--- a/views/show.ejs
+++ b/views/show.ejs
@@ -289,7 +289,7 @@
 
 
     <!-- THREE CARDS LAYOUT TEST -->
-    <div class="product-details-three-layout">
+    <!-- <div class="product-details-three-layout">
         <div class="container">
             <div class="row" id="row0">
                 <div> World class quality battery</div>
@@ -353,7 +353,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- Cloning Mukata -->
 
