--- a/views/show.ejs
+++ b/views/show.ejs
@@ -170,12 +170,12 @@
     
 <!-- Mukuta Description -->
 
-<section class=" part1">
-    <h5 class="text-center"> MUKUTA 10 Plus Description </h5>
+<section class="product-details-three-card-description">
+    <h1 class="text-center"> MUKUTA 10 Plus Description </h1>
     <!-- Test with Cards -->
     <div class="container" id="row1">
-        <h2>1400Wx2 Brushless Motors
-        </h2>
+        <h4>1400Wx2 Brushless Motors
+        </h4>
         <div class="row">
             <div class="col-md-4" id="column">
                 <div class="card">
@@ -226,9 +226,9 @@
 
         </div>
 
-        <div class="container" id="row1">
-            <h2>1400Wx2 Brushless Motors
-            </h2>
+        <div class="container" id="row2">
+            <h4>1400Wx2 Brushless Motors
+            </h4>
             <div class="row">
                 <div class="col-md-4" id="column">
                     <div class="card">
@@ -515,7 +515,7 @@
 
 
 <!-- 4 image layout -->
-    <section class="test" id="test">
+    <section class="four-image-layout" id="test">
         <div class="container">
             <div class="card " id="card1">
                 <div class="row g-0">
@@ -567,7 +567,7 @@
             <div class="card " id="card3">
                 <div class="row g-0">
                     <div class="col-md-6 col-lg-6" id="img3-1">
-                        <img id="img1" src="https://www.mukutariding.com/cdn/shop/files/6.jpg?v=1676356266&width=750"
+                        <img id="img3" src="https://www.mukutariding.com/cdn/shop/files/6.jpg?v=1676356266&width=750"
                             class="img-fluid" alt="..." style="height: 100%; width: 100%;">
                     </div>
                     <div class="col-md-6 col-lg-6">
@@ -600,7 +600,7 @@
 
                     </div>
                     <div class="col-md-6 col-lg-6" id="img4-1">
-                        <img id="img2" src="https://www.mukutariding.com/cdn/shop/files/1.jpg?v=1676356266&width=750"
+                        <img id="img4" src="https://www.mukutariding.com/cdn/shop/files/1.jpg?v=1676356266&width=750"
                             class="img-fluid" alt="..." style="height: 100%; width: 100%;">
                     </div>
                 </div>
