--- a/views/about.ejs
+++ b/views/about.ejs
@@ -8,49 +8,40 @@
     <div class="rows">
         <div class="column">
 
-
             <img class="img-fluid"
-                src="https://scontent.fhan3-5.fna.fbcdn.net/v/t39.30808-6/353634586_647229977458623_466531448942366686_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=5614bc&_nc_ohc=LP7IJJULVHcAX9vFwwD&_nc_ht=scontent.fhan3-5.fna&oh=00_AfDHCigEk1VOztM7-axbKcxi39bbCPnAI1wOYokFne70xg&oe=64FF53A4"
-                alt="">
+            src="https://res.cloudinary.com/dashjv0yt/image/upload/v1695803856/VetStore/about/353634586_647229977458623_466531448942366686_n_x4totj.jpg"
+            alt="">
 
-            <!-- <img class="img-fluid"
-                src="https://scontent.fhan3-3.fna.fbcdn.net/v/t39.30808-6/353409689_646738880841066_5874265480978482522_n.jpg?stp=cp6_dst-jpg&_nc_cat=106&ccb=1-7&_nc_sid=5614bc&_nc_ohc=Iv2KUOHnobsAX-0V8W4&_nc_ht=scontent.fhan3-3.fna&oh=00_AfCAQ05M4EPI9zioTokO_TGHFBw_rAvo5xsqP7axxTuuXw&oe=64FFD548"
-                alt=""> -->
-
-            <img class="img-fluid"
-                src="https://scontent.fhan3-2.fna.fbcdn.net/v/t39.30808-6/354984269_647944367387184_8244757030103686122_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=49d041&_nc_ohc=RDUH85m1h2oAX_3aKT4&_nc_ht=scontent.fhan3-2.fna&oh=00_AfBJsVZ3ZocmDkWjjMkDqGfJkKrWYQQHaJmi7hz71orJ7Q&oe=64FF05F1"
-                alt="">
 
             <img class="img-fluid"
                 src="https://images.unsplash.com/photo-1634886313120-c8bfa8e84205?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1976&q=80"
                 alt="">
-            <!-- 
-            <img class="img-fluid"
-                src="https://scontent.fhan3-3.fna.fbcdn.net/v/t39.30808-6/353044873_647229930791961_2922392357882283381_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=5614bc&_nc_ohc=Qv0Up77n_54AX_8s3iX&_nc_ht=scontent.fhan3-3.fna&oh=00_AfBBBBBl7tKpgS4jpGsHGyozjpVzJiL2h4ILOR58RrGUCQ&oe=64FF968B"
-                alt=""> -->
-
+                <img class="img-fluid"
+                src="https://images.unsplash.com/photo-1623207831300-8915dd80afd2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nzl8fGVsZWN0cmljJTIwc2Nvb3RlcnxlbnwwfHwwfHx8Mg%3D%3D&auto=format&fit=crop&w=600&q=60"
+                alt="">
+                
             <img class="img-fluid"
                 src="https://images.unsplash.com/photo-1547619292-8816ee7cdd50?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mzl8fGVsZWN0cmljJTIwc2Nvb3RlcnxlbnwwfHwwfHx8Mg%3D%3D&auto=format&fit=crop&w=600&q=60"
                 alt="">
         </div>
 
         <div class="column">
-            <img class="img-fluid"
-                src="https://scontent.fhan3-5.fna.fbcdn.net/v/t39.30808-6/353448065_647229844125303_7000364137639364842_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=5614bc&_nc_ohc=ckwbKSkcmcwAX_Vko-J&_nc_ht=scontent.fhan3-5.fna&oh=00_AfBn28nuopHU-xKIKK3Vpw2HLXTHpXOkgVxO2R70vPmMfw&oe=64FFEFB0"
-                alt="">
 
             <img class="img-fluid"
                 src="https://images.unsplash.com/photo-1621222667887-c1112e53abb1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NjZ8fGVsZWN0cmljJTIwc2Nvb3RlcnxlbnwwfHwwfHx8Mg%3D%3D&auto=format&fit=crop&w=600&q=60"
                 alt="">
 
-            <img class="img-fluid"
-                src="https://images.unsplash.com/photo-1631255500887-a568e24103e4?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1974&q=80"
-                alt="">
+            
 
             <img class="img-fluid"
-                src="https://images.unsplash.com/photo-1623207831300-8915dd80afd2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nzl8fGVsZWN0cmljJTIwc2Nvb3RlcnxlbnwwfHwwfHx8Mg%3D%3D&auto=format&fit=crop&w=600&q=60"
+                src="https://res.cloudinary.com/dashjv0yt/image/upload/v1695803856/VetStore/about/352259967_647074894140798_2679470760555749392_n_xnxlf3.jpg"
                 alt="">
 
+        
+                <img class="img-fluid"
+                src="https://res.cloudinary.com/dashjv0yt/image/upload/v1695803856/VetStore/about/353044873_647229930791961_2922392357882283381_n_nculay.jpg"
+                alt="">
+            
             <img class="img-fluid"
                 src="https://images.unsplash.com/photo-1559585198-8c2694b5d132?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1974&q=80"
                 alt="">
@@ -59,7 +50,7 @@
         <div class="column">
 
             <img class="img-fluid"
-                src="https://scontent.fhan3-3.fna.fbcdn.net/v/t39.30808-6/363775516_668916188623335_2675517400051668055_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=49d041&_nc_ohc=Q0gO4nWIVakAX8C8EDK&_nc_ht=scontent.fhan3-3.fna&oh=00_AfDr4YXPAIzCY8gtgm243xv2NgtHxlGXWTjbVKe62ABUrA&oe=65000B09"
+                src="https://res.cloudinary.com/dashjv0yt/image/upload/v1695803856/VetStore/about/353448065_647229844125303_7000364137639364842_n_yrqw5u.jpg"
                 alt="">
 
             <img class="img-fluid"
@@ -67,7 +58,7 @@
                 alt="">
 
             <img class="img-fluid"
-                src="https://scontent.fhan4-1.fna.fbcdn.net/v/t39.30808-6/355509604_649747013873586_1017385922893685590_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=a2f6c7&_nc_ohc=ra4dAKXpehsAX8AgEUz&_nc_ht=scontent.fhan4-1.fna&oh=00_AfDY_0A8cd0y8NZAWQkq-1_1pYgOSCrnreUIdlafbUbvFw&oe=64FF9E01"
+                src="https://res.cloudinary.com/dashjv0yt/image/upload/v1695803856/VetStore/about/logo_wkxok6.jpg"
                 alt="">
 
             <img class="img-fluid"
@@ -96,9 +87,7 @@
                 src="https://plus.unsplash.com/premium_photo-1681486795901-78849e196ced?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1887&q=80"
                 alt="">
 
-            <img class="img-fluid"
-                src="https://scontent.fhan4-1.fna.fbcdn.net/v/t39.30808-6/365241133_677018207813133_1853295981806668785_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=49d041&_nc_ohc=UhFq19zqXEsAX9QrED6&_nc_ht=scontent.fhan4-1.fna&oh=00_AfCsHIvAjqF9ZQQUiMIvfl8tzwfmhkISsWdiAhPyDhDcmg&oe=64FEA086"
-                alt="">
+           
 
 
         </div>
@@ -112,16 +101,13 @@
                 src="https://images.unsplash.com/photo-1589308454676-06c69786e24c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1935&q=80"
                 alt="">
 
-            <img class="img-fluid"
-                src="https://scontent.fhan3-3.fna.fbcdn.net/v/t39.30808-6/365277576_674899248025029_618850793293968785_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=49d041&_nc_ohc=0onyaHzbbLMAX8rXsQb&_nc_ht=scontent.fhan3-3.fna&oh=00_AfAwoSjEayBaBBrM8M_Vr_pB4tbS_0aqS9dWjzDAVYYTbg&oe=64FF1A74"
-                alt="">
-
+                
             <img class="img-fluid"
                 src="https://images.unsplash.com/photo-1597260491590-7a542ff29bdd?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1852&q=80"
                 alt="">
 
             <img class="img-fluid"
-                src="https://scontent.fhan3-3.fna.fbcdn.net/v/t39.30808-6/370564137_684333883748232_1788331204030999374_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=49d041&_nc_ohc=POu-Qfis_YIAX-9o8q1&_nc_ht=scontent.fhan3-3.fna&oh=00_AfCLvIEgrmWyGvjxecClrs5_OjBj09PBStsxEkshi3TdIg&oe=650069C8"
+                src="https://images.unsplash.com/photo-1614226170075-d338afcd9c53?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1780&q=80"
                 alt="">
 
         </div>
