--- a/views/partials/toasts.ejs
+++ b/views/partials/toasts.ejs
@@ -47,7 +47,7 @@
       <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close" id="closeToast1"></button>
     </div>
     <div class="toast-body text-success" style="font-size: 30px;">
-      Rosie just purchased 1 Mukuta 8
+      Rosie just purchased Mukuta 8 🎉🎉🎉
     </div>
   </div>
 
@@ -59,7 +59,7 @@
       <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close" id="closeToast2"></button>
     </div>
     <div class="toast-body text-success" style="font-size: 30px;">
-      Erik just purchased 1 Mukuta Pro Plus
+      Erik just purchased Mukuta 10 🎉🎉🎉
     </div>
   </div>
 </div>
