--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,15 +1,24 @@
 <nav class="navbar mb-0 sticky-top navbar-expand-lg navbar-dark bg-dark" >
-    <div class="container-fluid ">
-      <a class="navbar-brand" href="/home">VET</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav mx-auto">
-          <a class="nav-link active" aria-current="page" href="/home">Home</a>
-          <a class="nav-link" href="/products">Products</a>
-          <a class="nav-link" href="/about">About Us</a>
-        </div>
+  <div class="container-fluid ">
+    <a class="navbar-brand" href="/home">VET</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav mx-auto">
+        <a class="nav-link active" aria-current="page" href="/home">Home</a>
+        <a class="nav-link" href="/products">Products</a>
+        <a class="nav-link" href="/about">About Us</a>
+        <% if(!currentUser) {%>
+        <!-- <a class="nav-link" href="/register">Register</a> -->
+        <a class="nav-link" href="/login">Login </a>
+        <% } else {%> 
+        <a class="nav-link" href="/logout"> Logout (<%= currentUser.username %>) </a>
+        <% } %>
+
+        
+
       </div>
     </div>
-  </nav>
+  </div>
+</nav>
