--- a/views/products/show.ejs
+++ b/views/products/show.ejs
@@ -624,7 +624,7 @@
     </div>
 
     <!-- Form modal -->
-    <%- include('./partials/reviewform.ejs') %>
+    <%- include('../partials/reviewform.ejs') %>
 
         <!-- View all reviews submitted by users -->
         <section class="product-details-view-reviews">
