--- a/public/css/app.css
+++ b/public/css/app.css
@@ -855,9 +855,9 @@ body {
     justify-content: center;
 }
 
-.product-details-one .slider-for  {
+/* .product-details-one .slider-for  {
 
-}
+} */
 
 .product-details-one .slider-for img {
     width: 400px;
@@ -867,13 +867,13 @@ body {
 
 
 
-
+/* 
 .product-details-one .slider-nav {}
 
 .product-details-one .slider-nav div {
 
 
-}
+} */
 
 
 .product-details-one .slider-nav img {
